--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -138,7 +138,7 @@ jobs:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       artifact_id: "${{ needs.lxd.outputs.artifact_name }}"
       artifact_file: "${{ needs.lxd.outputs.artifact_file }}"
-      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !github.ref_protected }}
+      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
     secrets: inherit
 
   raspberrypi-release:
@@ -151,7 +151,7 @@ jobs:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       artifact_id: "${{ needs.raspberrypi.outputs.artifact_name }}"
       artifact_file: "${{ needs.raspberrypi.outputs.artifact_file }}"
-      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !github.ref_protected }}
+      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
     secrets: inherit
 
   odroidxu4-release:
@@ -164,7 +164,7 @@ jobs:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       artifact_id: "${{ needs.odroidxu4.outputs.artifact_name }}"
       artifact_file: "${{ needs.odroidxu4.outputs.artifact_file }}"
-      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !github.ref_protected }}
+      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
     secrets: inherit
   rockpro64-release:
     needs:
@@ -176,7 +176,7 @@ jobs:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       artifact_id: "${{ needs.rockpro64.outputs.artifact_name }}"
       artifact_file: "${{ needs.rockpro64.outputs.artifact_file }}"
-      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !github.ref_protected }}
+      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
     secrets: inherit
   rock64-release:
     needs:
@@ -188,7 +188,7 @@ jobs:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       artifact_id: "${{ needs.rock64.outputs.artifact_name }}"
       artifact_file: "${{ needs.rock64.outputs.artifact_file }}"
-      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !github.ref_protected }}
+      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
     secrets: inherit
   bananapi-release:
     needs:
@@ -200,7 +200,7 @@ jobs:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       artifact_id: "${{ needs.bananapi.outputs.artifact_name }}"
       artifact_file: "${{ needs.bananapi.outputs.artifact_file }}"
-      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !github.ref_protected }}
+      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
     secrets: inherit
   odroidhc4-release:
     needs:
@@ -212,7 +212,7 @@ jobs:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       artifact_id: "${{ needs.odroidhc4.outputs.artifact_name }}"
       artifact_file: "${{ needs.odroidhc4.outputs.artifact_file }}"
-      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !github.ref_protected }}
+      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
     secrets: inherit
   odroidc4-release:
     needs:
@@ -224,7 +224,7 @@ jobs:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       artifact_id: "${{ needs.odroidc4.outputs.artifact_name }}"
       artifact_file: "${{ needs.odroidc4.outputs.artifact_file }}"
-      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !github.ref_protected }}
+      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
     secrets: inherit
   odroidc2-release:
     needs:
@@ -236,14 +236,14 @@ jobs:
       git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       artifact_id: "${{ needs.odroidc2.outputs.artifact_name }}"
       artifact_file: "${{ needs.odroidc2.outputs.artifact_file }}"
-      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !github.ref_protected }}
+      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
     secrets: inherit
 
   docker-release:
     needs:
       - docker
       - test-curl-installer
-    if: ${{ (inputs.release || github.event_name != 'workflow_dispatch') && github.ref_type == 'tag' && github.ref_protected }}
+    if: ${{ (inputs.release || github.event_name != 'workflow_dispatch') && github.ref_type == 'tag' && (github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
     runs-on: ubuntu-latest
     steps:
       - name: Login to DockerHub
@@ -306,7 +306,7 @@ jobs:
           echo "ref type: ${{ github.ref_type }}"
           echo "protected?: ${{ github.ref_protected }}"
       - name: Create Draft
-        if: ${{ (inputs.release || github.event_name != 'workflow_dispatch') && github.ref_type == 'tag' && github.ref_protected }}
+        if: ${{ (inputs.release || github.event_name != 'workflow_dispatch') && github.ref_type == 'tag' && (github.ref_protected || startsWith(github.ref, 'refs/tags/v')) }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         working-directory: ./release
